--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -22,9 +22,14 @@ on:
           - debug
         default: 'release'
 
+env:
+  VERSION_NAME: ${{ github.event.inputs.version_name || '1.0.0' }}
+  VERSION_CODE: ${{ github.event.inputs.version_code || '1' }}
+  BUILD_TYPE: ${{ github.event.inputs.build_type || 'release' }}
+
 jobs:
   build:
-    name: Build ${{ inputs.build_type }} APK v${{ inputs.version_name }}
+    name: Build ${{ github.event.inputs.build_type || 'release' }} APK v${{ github.event.inputs.version_name || '1.0.0' }}
     runs-on: ubuntu-latest
     timeout-minutes: 60
 
@@ -71,14 +76,14 @@ jobs:
         {
           "name": "TipitakaAI",
           "displayName": "พระไตรปิฎก AI",
-          "version": "${{ inputs.version_name }}"
+          "version": "${{ env.VERSION_NAME }}"
         }
         EOF
 
     - name: Generate Release Keystore
       run: |
         cd build-project/android/app
-        keytool -genkey -v -keystore release.keystore -alias release -keyalg RSA -keysize 2048 -validity 10000 -storepass tripitaka2024 -keypass tripitaka2024 -dname "CN=TipitakaAI, O=TripitakaAI, C=TH"
+        keytool -genkey -v -keystore release.keystore -alias release -keyalg RSA -keysize 2048 -validity 10000 -storepass tripitaka2024 -keypass tripitaka2024 -dname "CN=TipitakaAI, O=TipitakaAI, C=TH"
 
     - name: Configure Release Signing
       run: |
@@ -93,8 +98,8 @@ jobs:
         cd build-project/android/app
         
         # Update version
-        sed -i "s/versionCode 1/versionCode ${{ inputs.version_code }}/" build.gradle
-        sed -i "s/versionName \"1.0\"/versionName \"${{ inputs.version_name }}\"/" build.gradle
+        sed -i "s/versionCode 1/versionCode ${{ env.VERSION_CODE }}/" build.gradle
+        sed -i "s/versionName \"1.0\"/versionName \"${{ env.VERSION_NAME }}\"/" build.gradle
         
         # Add signing config
         cat >> build.gradle << 'GRADLE_EOF'
@@ -120,21 +125,21 @@ jobs:
         GRADLE_EOF
 
     - name: Build Release APK
-      if: inputs.build_type == 'release'
+      if: env.BUILD_TYPE == 'release'
       working-directory: build-project/android
       run: ./gradlew assembleRelease --no-daemon
 
     - name: Build Debug APK
-      if: inputs.build_type == 'debug'
+      if: env.BUILD_TYPE == 'debug'
       working-directory: build-project/android
       run: ./gradlew assembleDebug --no-daemon
 
     - name: Rename and prepare APK
       run: |
-        if [ "${{ inputs.build_type }}" = "release" ]; then
-          mv build-project/android/app/build/outputs/apk/release/app-release.apk build-project/TipitakaAI-v${{ inputs.version_name }}.apk
+        if [ "${{ env.BUILD_TYPE }}" = "release" ]; then
+          mv build-project/android/app/build/outputs/apk/release/app-release.apk build-project/TipitakaAI-v${{ env.VERSION_NAME }}.apk
         else
-          mv build-project/android/app/build/outputs/apk/debug/app-debug.apk build-project/TipitakaAI-v${{ inputs.version_name }}-debug.apk
+          mv build-project/android/app/build/outputs/apk/debug/app-debug.apk build-project/TipitakaAI-v${{ env.VERSION_NAME }}-debug.apk
         fi
 
     - name: Get APK Info
@@ -144,28 +149,29 @@ jobs:
         echo "---"
         echo "APK: $(ls *.apk)"
         echo "Size: $(du -h *.apk | cut -f1)"
-        echo "Version: ${{ inputs.version_name }}"
-        echo "Version Code: ${{ inputs.version_code }}"
-        echo "Build Type: ${{ inputs.build_type }}"
+        echo "Version: ${{ env.VERSION_NAME }}"
+        echo "Version Code: ${{ env.VERSION_CODE }}"
+        echo "Build Type: ${{ env.BUILD_TYPE }}"
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: TipitakaAI-v${{ inputs.version_name }}-${{ inputs.build_type }}
+        name: TipitakaAI-v${{ env.VERSION_NAME }}-${{ env.BUILD_TYPE }}
         path: build-project/*.apk
 
     - name: Create Release
-      if: inputs.build_type == 'release'
+      if: env.BUILD_TYPE == 'release'
       uses: softprops/action-gh-release@v1
       with:
-        tag_name: v${{ inputs.version_name }}
-        name: TipitakaAI v${{ inputs.version_name }}
+        token: ${{ secrets.GH_TOKEN }}
+        tag_name: v${{ env.VERSION_NAME }}
+        name: TipitakaAI v${{ env.VERSION_NAME }}
         body: |
-          # พระไตรปิฎก AI v${{ inputs.version_name }}
+          # พระไตรปิฎก AI v${{ env.VERSION_NAME }}
           
           ## ข้อมูลเวอร์ชัน
-          - **Version:** ${{ inputs.version_name }}
-          - **Version Code:** ${{ inputs.version_code }}
+          - **Version:** ${{ env.VERSION_NAME }}
+          - **Version Code:** ${{ env.VERSION_CODE }}
           - **Build Type:** Release
           
           ## การติดตั้ง
