--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -29,7 +29,7 @@ env:
 
 jobs:
   build:
-    name: Build ${{ github.event.inputs.build_type || 'release' }} APK v${{ github.event.inputs.version_name || '1.0.0' }}
+    name: Build APK v${{ github.event.inputs.version_name || '1.0.0' }}
     runs-on: ubuntu-latest
     timeout-minutes: 60
 
@@ -47,7 +47,6 @@ jobs:
       with:
         distribution: 'temurin'
         java-version: '17'
-        cache: 'gradle'
 
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
@@ -58,21 +57,19 @@ jobs:
         path: |
           ~/.gradle/caches
           ~/.gradle/wrapper
-          ~/.android/cache
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}-v2
+        key: ${{ runner.os }}-gradle-global-v1
         restore-keys: |
-          ${{ runner.os }}-gradle-v2
+          ${{ runner.os }}-gradle-global-v1
 
     - name: Cache RN Project
-      id: cache-rn-project
       uses: actions/cache@v4
       with:
         path: |
           build-project/node_modules
           build-project/android/.gradle
-        key: ${{ runner.os }}-rn-project-v1
+        key: ${{ runner.os }}-rn-project-v2
         restore-keys: |
-          ${{ runner.os }}-rn-project-v1
+          ${{ runner.os }}-rn-project-v2
 
     - name: Create React Native project
       run: |
