--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -67,9 +67,9 @@ jobs:
         path: |
           build-project/node_modules
           build-project/android/.gradle
-        key: ${{ runner.os }}-rn-project-v2
+        key: ${{ runner.os }}-rn-project-v3
         restore-keys: |
-          ${{ runner.os }}-rn-project-v2
+          ${{ runner.os }}-rn-project-v3
 
     - name: Create React Native project
       run: |
@@ -80,10 +80,8 @@ jobs:
     - name: Install dependencies
       working-directory: build-project
       run: |
-        if [ ! -d "node_modules" ]; then
-          npm install --legacy-peer-deps
-          npm install react-native-screens react-native-safe-area-context react-native-svg @react-navigation/native @react-navigation/native-stack @react-navigation/bottom-tabs zustand --legacy-peer-deps
-        fi
+        npm install --legacy-peer-deps
+        npm install react-native-screens react-native-safe-area-context react-native-svg @react-navigation/native @react-navigation/native-stack @react-navigation/bottom-tabs zustand lucide-react-native --legacy-peer-deps
 
     - name: Copy source code
       run: |
