--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
     "@babel/runtime": "^7.24.0",
-    "@react-native-community/cli": "^20.1.1",
-    "@react-native-community/cli-platform-android": "^20.1.1",
+    "@react-native-community/cli": "^15.0.0",
+    "@react-native-community/cli-platform-android": "^15.0.0",
     "@react-native/babel-preset": "0.73.1",
     "@react-native/eslint-config": "0.73.1",
     "@react-native/metro-config": "0.73.1",
@@ -58,9 +58,11 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
+    "autoprefixer": "^10.4.18",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
+    "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "typescript": "^5.4.2"
   },
